tests/compile/fail/explicit_test_case_bad_syntax.stderr
error: expected `,`
 --> tests/compile/fail/explicit_test_case_bad_syntax.rs:3:35
  |
3 | #[hegel::explicit_test_case(x = 42;)]
  |                                   ^
